--- a/data/zappyrent.json
+++ b/data/zappyrent.json
@@ -6,6 +6,6 @@
     "tags": [
         "affitti", "case"
     ],
-    "description": "Zappyrent è una piattaforma di affitti a medio‑lungo termine, che riporta il controllo nelle mani dei proprietari e degli inquilini. È una piattaforma che gestisce l’intero processo di affitto; dagli annunci alla gestione dei contratti, dai depositi fino al pagamento delle mensilità.",
+    "description": "Piattaforma di affitti a medio‑lungo termine, che gestisce l’intero processo di affitto; dagli annunci alla gestione dei contratti, dai depositi fino al pagamento delle mensilità.",
     "foundation_year": "2019"
 }
