--- a/website/package.json
+++ b/website/package.json
@@ -24,32 +24,28 @@
     "@types/react": "^17.0.2",
     "@types/react-transition-group": "^4.2.4",
     "clsx": "^1.2.1",
+    "leaflet": "^1.9.1",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primereact": "^8.4.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^4.0.2",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.1.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/leaflet": "^1.8.0",
     "typescript": "^4.7.4"
   },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
   "engines": {
     "node": ">=16.14"
   }
