--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,13 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.14'
+
       - name: Setup and test
         run: |
           make setup-ci
           make lint-ci
+          make build
